RESOLVED FIXED132038
Cursor doesn't change back to pointer when leaving Mail
https://bugs.webkit.org/show_bug.cgi?id=132038
Summary Cursor doesn't change back to pointer when leaving Mail
Ryosuke Niwa
Reported 2014-04-22 21:57:05 PDT
Reproduction steps: 1. Visit simple-rte.rniwa.com 2. Focus the textarea in the bottom. Observe that the cursor is now I-beam. 3. Move the cursor towards the right edge of the Safari window (but keep it inside the window). 4. Rapidly move the mouse cursor out of the window. Expected result: The cursor changes to pointer Actual result: The cursor remains I-beam. <rdar://problem/15345851>
Attachments
Fixes the bug (5.68 KB, patch)
2014-04-22 22:08 PDT, Ryosuke Niwa
no flags
Patch for landing (5.68 KB, patch)
2014-04-22 22:35 PDT, Ryosuke Niwa
no flags
Fixes the bug (2.56 KB, patch)
2015-03-25 18:27 PDT, Ryosuke Niwa
no flags
Patch (8.88 KB, patch)
2015-03-26 12:47 PDT, Ryosuke Niwa
no flags
Fixed change logs (8.48 KB, patch)
2015-03-26 12:48 PDT, Ryosuke Niwa
no flags
Reverted the refactroing per Andres' request (4.42 KB, patch)
2015-03-26 14:41 PDT, Ryosuke Niwa
andersca: review+
Ryosuke Niwa
Comment 1 2014-04-22 21:57:31 PDT
This bug is partially caused by http://trac.webkit.org/changeset/147739.
Ryosuke Niwa
Comment 2 2014-04-22 22:08:35 PDT
Created attachment 229955 [details] Fixes the bug
Alexey Proskuryakov
Comment 3 2014-04-22 22:15:26 PDT
Comment on attachment 229955 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=229955&action=review > Source/WebCore/page/EventHandler.cpp:1386 > + bool editable = node ? node->hasEditableStyle() : false; I think that "node && node->hasEditableStyle()" would be more readable than a ternary.
Ryosuke Niwa
Comment 4 2014-04-22 22:35:26 PDT
(In reply to comment #3) > (From update of attachment 229955 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=229955&action=review > > > Source/WebCore/page/EventHandler.cpp:1386 > > + bool editable = node ? node->hasEditableStyle() : false; > > I think that "node && node->hasEditableStyle()" would be more readable than a ternary. Will fix. Thanks for the review!
Ryosuke Niwa
Comment 5 2014-04-22 22:35:48 PDT
Created attachment 229957 [details] Patch for landing
WebKit Commit Bot
Comment 6 2014-04-22 23:11:50 PDT
Comment on attachment 229957 [details] Patch for landing Clearing flags on attachment: 229957 Committed r167700: <http://trac.webkit.org/changeset/167700>
WebKit Commit Bot
Comment 7 2014-04-22 23:11:54 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 8 2014-04-24 08:50:09 PDT
Comment on attachment 229955 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=229955&action=review > Source/WebKit/mac/ChangeLog:14 > + Instead, check whether the NSWindow of the WebView is the key window or not since > + key window appears to control the cursor style in Cocoa as far as I've tested: > + https://developer.apple.com/library/mac/documentation/Cocoa/Conceptual/WinPanel/Concepts/ChangingMainKeyWindow.html Did you retest the problems described in <rdar://problem/14619911> to see if it’s still fixed?
WebKit Commit Bot
Comment 9 2014-04-24 13:55:36 PDT
Re-opened since this is blocked by bug 132142
Ryosuke Niwa
Comment 10 2015-03-25 18:27:18 PDT
Created attachment 249459 [details] Fixes the bug
Ryosuke Niwa
Comment 11 2015-03-26 12:47:25 PDT
Ryosuke Niwa
Comment 12 2015-03-26 12:48:41 PDT
Created attachment 249509 [details] Fixed change logs
Ryosuke Niwa
Comment 13 2015-03-26 14:41:42 PDT
Created attachment 249513 [details] Reverted the refactroing per Andres' request
Ryosuke Niwa
Comment 14 2015-03-26 14:44:03 PDT
Note You need to log in before you can comment on or make changes to this bug.