Source/WebKit2/UIProcess/mac/PageClientImpl.mm
@@ -324,10 +324,7 @@ void PageClientImpl::setCursor(const WebCore::Cursor& cursor)
         return;
 
     NSWindow *window = [m_wkView window];
-    if (!window)
-        return;
-
-    if ([window windowNumber] != [NSWindow windowNumberAtPoint:[NSEvent mouseLocation] belowWindowWithWindowNumber:0])
+    if (!window || ![window isKeyWindow])
         return;
 
     NSCursor *platformCursor = cursor.platformCursor();
